--- a/SPRINT/.settings/org.talend.repository.prefs
+++ b/SPRINT/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:wSxNppXO5zdRC0KdcIanQbC4Cp3lSDD56DGzntk5r7DuJpNmiqUDXwk\=
